# qi

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  project.org
code/: .clang  .clang-format  .clang_complete  CMakeLists.txt  array.cpp  b  basictypes.h  bitmap.cpp  bitmap.h  build  build.bat  cmd  cmp  cmr  compile_commands.json  compile_commands_win.json  debug.cpp  debug.h  deque.cpp  editor.cpp  editor.h  entity.cpp  entity.h  game.cpp  game.h  gamedb.cpp  gamedb.h  gjk.cpp  gjk.h  has.h  hw_ogl.cpp  hw_ogl.h  hw_ogl.h.cpp  hw_ogl.h.h  hwi.h  imgui_vs.glsl  keystore.cpp  keystore.h  lexer.cpp  main_sdl.cpp  (+79 more)
data/: blit_fs.glsl  blit_vs.glsl  imgui.ini  imgui_fs.glsl  sample.qed  sample.qid
data/qed/sprites/: tiledefs.qed
scripts/: b  cm
